Updated link to repository

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 		<p>Biciklističke staze se nalaze svuda uokolo i po cijeloj Istri, a ljubiteljima golfa su na raspolaganju golf tereni u Golf Clubu Adriatic koji su udaljeni samo petnaestak minuta automobilom.</p>
 	</main>
 		<footer>
-		<p>Copyright &copy; 2020 Lucija Labura<a href="https://github.com/llabura/Projekt-villa-GioAn"><img src="img/github_icon.png" title="Github" alt="Github"></a></p>
+		<p>Copyright &copy; 2020 Lucija Labura<a href="https://github.com/llabura?tab=repositories"><img src="img/github_icon.png" title="Github" alt="Github"></a></p>
 		</footer>
 	</body>
 </html>
