--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<p>Villa ima 3 garaže na raspolaganju. . U uređenom parku, tik uz bazen, nalazi se potpuno opremljena ljetna kuhinja s natkrivenom terasom, masivnim drvenim stolovima za ugodna druženja i roštiljem gdje se možete okušati u pripremanju delicija po vašem izboru začinjena biljem iz aromatičnog vrta koji ga okružuje.</p>
 		</main>
 		<footer>
-		<p>Copyright &copy; 2020 Lucija Labura<a href="https://github.com/llabura/Projekt-villa-GioAn"><img src="img/github_icon.png" title="Github" alt="Github"></a></p>
+		<p>Copyright &copy; 2020 Lucija Labura<a href="https://github.com/llabura?tab=repositories"><img src="img/github_icon.png" title="Github" alt="Github"></a></p>
 		</footer>
 	</body>
 </html>
